# twerris

./: Cargo.toml
src/: context_annotation.rs  entities.rs  geo.rs  includes.rs  lib.rs  list.rs  list_data.rs  list_id.rs  non_public_metrics.rs  organic_metrics.rs  promoted_metrics.rs  public_metrics.rs  referenced_tweet.rs  reply_settings.rs  space.rs  space_data.rs  space_id.rs  space_state.rs  topic_id.rs  tweet.rs  tweet_data.rs  tweet_id.rs  tweet_includes.rs  tweet_public_metrics.rs  user.rs  user_data.rs  user_public_metrics.rs
src/context_annotation/: domain.rs
src/context_annotations/: entity.rs
src/entities/: cashtag.rs  hashtag.rs  url.rs
src/list/: tests.rs
src/list/tests/: samples.json
src/space/: tests.rs
src/space/tests/: samples.json
src/tweet/: data.rs  includes.rs  tests.rs
src/tweet/data/: attachments.rs  context_annotations.rs  promoted_metrics.rs  public_metrics.rs  referenced_tweet.rs  reply_settings.rs  user_id.rs  withheld.rs
src/tweet/data/entities/: annotation.rs  mention.rs
src/tweet/data/geo/: coordinates.rs
src/tweet/data/referenced_tweet/: referenced_tweet_type.rs
src/tweet/tests/: sample_tweets.json
src/user/: tests.rs
src/user/tests/: samples.json
