[package]
name = "twerris"
version = "0.1.0"
edition = "2021"
description = "A Twitter API V2 client library for Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidhanio/twerris"
readme = "README.md"
keywords = ["twitter", "api", "client", "rust"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
